change in langauge

--- a/erpnext/translations/ar.csv
+++ b/erpnext/translations/ar.csv
@@ -9837,3 +9837,158 @@ Enable European Access,تمكين الوصول الأوروبي,
 Creating Purchase Order ...,إنشاء أمر شراء ...,
 "Select a Supplier from the Default Suppliers of the items below. On selection, a Purchase Order will be made against items belonging to the selected Supplier only.",حدد موردًا من الموردين الافتراضيين للعناصر أدناه. عند التحديد ، سيتم إجراء طلب الشراء مقابل العناصر التي تنتمي إلى المورد المحدد فقط.,
 Row #{}: You must select {} serial numbers for item {}.,الصف # {}: يجب تحديد {} الأرقام التسلسلية للعنصر {}.,
+"Warehouse Management System","نظام إدارة المستودعات"
+"Inbound","الوارد"
+"Purchase","الشراء"
+"Receiving","استلام"
+"Returns","المرتجعات"
+"Put Away","تخزين"
+"Bulk Put Away","تخزين الجملة"
+"Stock Movement","حركة المخزون"
+"Outbound","الصادر"
+"Assign Pick List","تعيين قائمة الاختيار"
+"Bulk Pick List","قائمة اختيار الجملة"
+"Pick List","قائمة الاختيار"
+"Pack List","قائمة التعبئة"
+"Dispatch List","قائمة الإرسال"
+"Reports","التقارير"
+"Setup","الإعداد"
+"Opening Stock","افتتاح المخزون"
+"Purchase Orders","أوامر الشراء"
+"Goods Received Note List","قائمة مذكرة استلام البضائع"
+"Assign Put Away","تعيين التخزين"
+"Pending Put Away List","قائمة التخزين المعلقة"
+"Purchase Management","إدارة الشراء"
+"Vendor Onboarding","تسجيل الموردين"
+"Create Purchase Order","إنشاء أمر شراء"
+"Vendor List","قائمة الموردين"
+"Purchase Order List","قائمة أوامر الشراء"
+"New Vendor","مورد جديد"
+"Not Saved","غير محفوظ"
+"Supplier Name","اسم المورد"
+"Vendor Group","مجموعة الموردين"
+"All Supplier Groups","جميع مجموعات الموردين"
+"Distributor","موزع"
+"Electrical","كهربائي"
+"Hardware","مواد صلبة"
+"Local","محلي"
+"Pharmaceutical","صيدلاني"
+"Raw Material","مواد خام"
+"Services","خدمات"
+"Advanced Search","بحث متقدم"
+"Country","بلد"
+"Vendor Type","نوع المورد"
+"Company","شركة"
+"Individual","فرد"
+"Proprietorship","ملكية فردية"
+"Partnership","شراكة"
+"New Purchase Order","أمر شراء جديد"
+"Vendor","المورد"
+"Date","تاريخ"
+"Series","سلسلة"
+"Scan Barcode","مسح الباركود"
+"Target Location","الموقع المستهدف"
+"Items","العناصر"
+"No.","الرقم"
+"Image","صورة"
+"SKU","وحدات حفظ المخزون"
+"Product Name","اسم المنتج"
+"Quantity","الكمية"
+"UOM","وحدة القياس"
+"Total Quantity","الكمية الإجمالية"
+"Currency","العملة"
+"GRN Put Away Pendency","قائمة انتظار تخزين المذكرات الواردة"
+"Goods Receipt Note List","قائمة مذكرة استلام البضائع"
+"Goods Receipt Note","مذكرة استلام البضائع"
+"Assignment Pending","تعيين معلق"
+"Stock Movement","حركة المخزون"
+"Put Away Pending","تخزين معلق"
+"Return Management","إدارة المرتجعات"
+"Return Pending","المرتجعات المعلقة"
+"Delivery Note","مذكرة تسليم"
+"QC Pending","فحص الجودة معلق"
+"Unassigned Put Away","تخزين غير معين"
+"Damage Put Away","تخزين التالف"
+"PUT AWAY LIST","قائمة التخزين"
+"This is your daily task list to Put Away Products to their required Bins in your Location.","هذه قائمة مهامك اليومية لتخزين المنتجات في الصناديق المطلوبة في موقعك."
+"Step 1 - Click on View List","الخطوة 1 - انقر على عرض القائمة"
+"Step 2 - Click on any Put Away Stock Movement you want to Transfer to the Bin","الخطوة 2 - انقر على أي حركة مخزون تريد نقلها إلى الصندوق"
+"Step 3 - Select or Scan Target Location against each Product","الخطوة 3 - حدد أو مسح الموقع المستهدف لكل منتج"
+"Step 4 - Click Submit","الخطوة 4 - انقر على تقديم"
+"NOTE,You have to complete all Stock Movements Assigned to you for Put Away","ملاحظة,يجب عليك إكمال جميع حركات المخزون المعينة لك للتخزين"
+"STOCK MOVEMENTS","حركات المخزون"
+"DAMAGE MOVEMENT","حركة التلف"
+"If any of the Products is damaged at any stage. You may Input Stock Damage to transfer such products to the Damage Space of your warehouse/location. This will remove such Product Quantities from Shopify as well.","إذا تضرر أي من المنتجات في أي مرحلة. يمكنك إدخال تلف المخزون لنقل هذه المنتجات إلى المساحة التالفة في مستودعك/موقعك. وسيتم إزالة كميات هذه المنتجات من Shopify أيضًا."
+"Step 1 - Click on the View List","الخطوة 1 - انقر على عرض القائمة"
+"Step 2 - Click on the Blue Button on Right Top of your interface at + Add New Stock Entry","الخطوة 2 - انقر على الزر الأزرق في الزاوية العلوية اليمنى من واجهتك في + إضافة إدخال مخزون جديد"
+"PUT AWAY DAMAGE","تخزين التلف"
+"Once the Product is placed on the damage floor and you are willing to move it to the damage bin. Put Away Damage shall be created.","بمجرد وضع المنتج على الأرض التالفة وأنت على استعداد لنقله إلى صندوق التلف. يجب إنشاء تخزين التلف."
+"Step 1 - Click on the View List","الخطوة 1 - انقر على عرض القائمة"
+"Step 2 - Click on the Blue Button on Right Top of your interface at + Add New Stock Entry","الخطوة 2 - انقر على الزر الأزرق في الزاوية العلوية اليمنى من واجهتك في + إضافة إدخال مخزون جديد"
+"STOCK DISCARD","تخزين التلف"
+"Once the Product is placed in the Damaged Space you may Discard it from your Inventory.","بمجرد وضع المنتج في المساحة التالفة يمكنك التخلص منه من جردك."
+"DAMAGE RETURN","تحرك المخزون"
+"If by mistake some of the Products are transferred to the Damaged Space of your Location / warehouse, you may revert this transaction through Damage Return. This will also update such Product Quantities in Shopify this way.","إذا تم نقل بعض المنتجات بالخطأ إلى المساحة التالفة من موقعك/مستودعك، يمكنك استرجاع هذه المعاملة من خلال إرجاع التلف. وسيتم تحديث كميات هذه المنتجات أيضًا في Shopify بهذه الطريقة."
+"STOCK TRANSFER","تحويل المخزون"
+"If you want to move your products from one Bin to the other within the same Location / warehouse use Stock Transfer.","إذا كنت ترغب في نقل منتجاتك من صندوق واحد إلى آخر داخل نفس الموقع/المستودع استخدم تحويل المخزون."
+"Step 1 - Click on the View List","الخطوة 1 - انقر على عرض القائمة"
+"Step 2 -Click on the Blue Button on Right Top of your interface at + Add New Stock Entry","الخطوة 2 - انقر على الزر الأزرق في الزاوية العلوية اليمنى من واجهتك في + إضافة إدخال مخزون جديد"
+"Orders","الطلبيات"
+"Assign Pickers","تعيين الاختيار"
+"Picker List","قائمة الاختيار"
+"Assign Pick List & Monitor Progress","تعيين قائمة الاختيار ومراقبة التقدم"
+"Pending To Assign","معلق على التعيين"
+"Assigned Pick List","قائمة الاختيار المعينة"
+"Packing In Process","التعبئة قيد التنفيذ"
+"Bulk Picking","اختيار بالجملة"
+"Create-pick list","إنشاء قائمة الاختيار"
+"Assignment Pending","في انتظار التعيين"
+"Picking In Process","الاختيار قيد التنفيذ"
+"Packer List","قائمة التعبئة"
+"Packing Task","مهمة التعبئة"
+"Bulk Packing","التعبئة بالجملة"
+"LOAD SHEET","ورقة الشحن"
+"Load Sheet List","قائمة ورقة الشحن"
+"Create load sheet","إنشاء ورقة الشحن"
+"New Load Sheet","ورقة شحن جديدة"
+"Delivery Details","تفاصيل التسليم"
+"Driver","سائق"
+"Vehicle","مركبة"
+"Delivery Company","شركة التسليم"
+"Location","الموقع"
+"Delivery Stops","مواقف التسليم"
+"Scan Barcode","مسح الباركود"
+"No.","الرقم"
+"CN#","CN#"
+"Consignee","المستلم"
+"City","المدينة"
+"Status","الحالة"
+"Stock Ledger Product Wise","دفتر المخزون حسب المنتج"
+"Stock Balance","رصيد المخزون"
+"Warehouse Wise Stock Balance","رصيد المخزون للمستودع"
+"New Racks & Bins","رفوف وصناديق جديدة"
+"Step 1 - Click on the Locations Rack & Bins","الخطوة 1 - انقر على رفوف وصناديق المواقع"
+"Step 2 - Take your cursor on the Rack and Click on Create a Child","الخطوة 2 - حرك المؤشر على الرف وانقر على إنشاء فرع"
+"Vendor Onboarding","استقبال الموردين"
+"Step 1 - Click on Vendor below","الخطوة 1 - انقر على المورد أدناه"
+"Step 2 - Click on + Add Vendor","الخطوة 2 - انقر على + إضافة مورد"
+"Step 3 - Input Vendor Information","الخطوة 3 - إدخال معلومات المورد"
+"Step 4 - Click on Save Button","الخطوة 4 - انقر على زر الحفظ"
+"Add New Picking Bins","إضافة صناديق الاختيار الجديدة"
+"Step 1 - Click on Picking Bin Below","الخطوة 1 - انقر على صندوق الاختيار أدناه"
+"Step 2 - Click on + Add Picking Bin on the right Top of your Interface","الخطوة 2 - انقر على + إضافة صندوق الاختيار في الزاوية العلوية اليمنى من واجهتك"
+"Step 3 - Input Barcode, Bin Name & Select Location","الخطوة 3 - إدخال الباركود، اسم الصندوق وتحديد الموقع"
+"Step 4 - Click on Save","الخطوة 4 - انقر على زر الحفظ"
+"Locations Rack & Bins","رفوف وصناديق المواقع"
+"Warehouse Tree","شجرة المستودع"
+"Collapse All","طي الكل"
+"Expand All","توسيع الكل"
+"Picking Bin","صندوق الاختيار"
+"Setup List","قائمة الإعدادات"
+"Vendor Group","مجموعة الموردين"
+"Racks & Bins","الرفوف والصناديق"
+"Picking Bins","صناديق الاختيار"
+"OUTBOUND","المرسل"
+"DISPATCH-MANAGEMENT","إدارة الشحن والتوزيع"
+"REPORTS","التقارير"
+"SETUP","الإعداد"
