change in language

--- a/erpnext/translations/ar.csv
+++ b/erpnext/translations/ar.csv
@@ -10012,3 +10012,5 @@ Create Load Sheet,إنشاء ورقة التحميل
 Create - GRN Putaway,إنشاء - وضع GRN بعيدًا
 Create - Return Putaway,إنشاء - إعادة الوضع
 Create - Pick List,إنشاء - اختيار القائمة
+No Data...,...لا توجد بيانات,
+Location Wise Stock,الموقع الحكيم الأسهم
